--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,8 @@
         <h2>Presentación</h2>
         <p>
           Soy estudiante de Ingeniería de Sofware, estoy actualmente cursando el
-          sexto semestre de la carrera y me interesa el desarrollo web.
+          sexto semestre de la carrera y me interesa el desarrollo web tanto
+          backend como frontend.
         </p>
       </section>
 
